server/src/search_executor/snapshots/navigatum_server__search_executor__test__building_formats.snap
---
source: server/src/search_executor/mod.rs
description: "Query: MW1801"
expression: results_prefixed.0
info: parsed_id=prefixed
---
- facet: rooms
  entries:
    - id: 5508.02.801
      type: room
      name: 5508.02.801 (Hörsaal)
      subtext: "garching, Maschinenwesen (MW)"
      subtext_bold: 1801@5508
    - id: 5510.02.001
      type: room
      name: "5510.02.001 (\u0019MW\u0017 2001 Rudolf-Diesel-Hörsaal)"
      subtext: "garching, Maschinenwesen (MW)"
      subtext_bold: 2001@5510
    - id: 5502.01.250
      type: room
      name: 5502.01.250 (Hörsaal)
      subtext: "garching, Maschinenwesen (MW)"
      subtext_bold: 1250@5502
    - id: 5502.EG.250
      type: room
      name: 5502.EG.250 (Hörsaal)
      subtext: "garching, Maschinenwesen (MW)"
      subtext_bold: 0250@5502
    - id: 5503.EG.350
      type: room
      name: 5503.EG.350 (Egbert-von-Hoyer-Hörsaal)
      subtext: "garching, Maschinenwesen (MW)"
      subtext_bold: 0350@5503
  n_visible: 5
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: sites_buildings
  entries:
    - id: mw
      type: joined_building
      name: "Maschinenwesen (\u0019MW\u0017)"
      subtext: Gebäudekomplex
    - id: "5506"
      type: building
      name: "Gebäudeteil 6, Institut für Luft- und Raumfahrt"
      subtext: Gebäudeteil
    - id: "5501"
      type: building
      name: "Gebäudeteil 1, Institut für Mechatronik"
      subtext: Gebäudeteil
    - id: "5502"
      type: building
      name: Institut für Werkstoffe und Verarbeitung
      subtext: Gebäudeteil
    - id: "5504"
      type: building
      name: "Gebäudeteil 4, Institut für Verfahrenstechnik"
      subtext: Gebäudeteil
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
