server/src/search_executor/snapshots/navigatum_server__search_executor__test__event_facet_returns_the_prefill_payload.snap
---
source: server/src/search_executor/mod.rs
description: the event facet returns the full proposal-form pre-fill payload
expression: results.0
info: "q=garnix, search_events=true"
---
- facet: events
  entries:
    - id: event_9d02ddd940c43f87
      name: "\u0019GARNIX\u0017 Festival"
      description: Open-air student festival.
      starts_at: "2026-06-15T14:00:00Z"
      ends_at: "2026-06-19T21:59:00Z"
      lat: 48.262908
      lon: 11.669102
      organising_org_id: 51897
      image: /cdn/thumb/event_9d02ddd940c43f87_0.webp
      image_author: Studentische Vertretung TUM
      image_thumb_offset: 0
      image_header_offset: 0
  n_visible: 1
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: sites
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: rooms
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: pois
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: lectures
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
